# ThermoFlow

./: .gitignore  BUILD.md  BUILD_ESP_IDF.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  PLATFORMIO.md  PROJECT_FRAMEWORK.md  README-HTTPS.md  README.md  build-local.ps1  build.sh  build_with_pio_idf.sh  flash-local.ps1  flash.sh  mkdocs.yml  partitions.csv  partitions_secure.csv  platformio.ini  quick_build.sh  requirements-docs.txt  sdkconfig.ci.defaults  sdkconfig.defaults  serial-capture.ps1
.github/: ci-build.sh
.github/workflows/: ci.yml  docs.yml
binaries/: README.md
cmake/: thermoflow_version.cmake
components/anti_condensation/: CMakeLists.txt  anti_condensation.c  library.json
components/anti_condensation/include/: anti_condensation.h
components/audit_log/: CMakeLists.txt  audit_log.c  library.json
components/audit_log/include/: audit_log.h
components/cert_manager/: CMakeLists.txt  Kconfig  cert_manager.c
components/cert_manager/include/: cert_manager.h
components/device_profile/: CMakeLists.txt  device_profile.c
components/device_profile/include/: device_profile.h
components/display_driver/: CMakeLists.txt  display_manager.c  library.json
components/display_driver/include/: display_manager.h  font_5x7.h
components/fan_control/: CMakeLists.txt  fan_controller.c  library.json
components/fan_control/include/: fan_controller.h
components/hardware_manager/: CMakeLists.txt  hardware_manager.c
components/hardware_manager/include/: hardware_manager.h
components/heat_recovery/: CMakeLists.txt  heat_recovery.h
components/heat_recovery/include/: heat_recovery.h
components/heat_recovery/src/: heat_recovery.c
components/log_manager/: CMakeLists.txt  log_manager.c
components/log_manager/include/: log_manager.h
components/mqtt_client/: CMakeLists.txt  Kconfig  README_MQTT_TLS.md  library.json  mqtt_client.c  mqtt_ftx.c  test_mqtt_pinning.c  test_mqtt_tls.c
components/mqtt_client/include/: mqtt_client.h  mqtt_ftx.h
components/ota_manager/: CMakeLists.txt  ota_manager.c
components/ota_manager/include/: ota_manager.h
components/rate_limiter/: CMakeLists.txt  library.json  rate_limiter.c
components/rate_limiter/include/: rate_limiter.h
components/security_utils/: CMakeLists.txt  ed25519_impl.c  library.json  security_manager.c
components/security_utils/include/: ed25519_impl.h  security_manager.h
components/sensor_manager/: CMakeLists.txt  library.json  sensor_manager.c
components/sensor_manager/include/: sensor_manager.h
components/sht3x_sensor/: CMakeLists.txt  README.md  library.json  sht3x_sensor.c
components/sht3x_sensor/include/: sht3x_sensor.h
components/sht4x_sensor/: CMakeLists.txt  library.json  sht4x_sensor.c
components/sht4x_sensor/include/: sht4x_sensor.h
components/tf_mem/: CMakeLists.txt  tf_mem.c
components/tf_mem/include/: tf_mem.h
components/web_server/: CMakeLists.txt  Kconfig  library.json  web_server.c  web_server_fixed_section.c  web_static.c
components/web_server/include/: web_server.h  web_static.h
components/web_server/web/: ftx-script.js  ftx-style.css  ftx.html  index.html  manifest.json  script.js  style.css  sw.js  wifi_config.html  wifi_reconnect.html
components/wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_secure_storage.c
components/wifi_manager/include/: wifi_manager.h  wifi_secure_storage.h  wifi_types.h
docs/: APPLICATION_MODES.md  DOCS_SITE.md  ESP_IDF_COMPATIBILITY.md  FTX_EXTENSION.md  HTTPS-SETUP.md  IMPLEMENTATION_STATUS.md  KEY_BACKUP_RECOVERY.md  LOGGING.md  MOBILE_AC.md  MQTT_FTX_API.md  OTA_IMPLEMENTATION.md  PSRAM.md  SBOM.md  SEC-024-IMPLEMENTATION.md  SEC-030-implementation-summary.md  SECURE_BOOT_PROVISIONING.md  SENSOR_WIRING.md  TODO.md  VERSIONING.md  WIFI_AND_FLASH.md  WiFi_Encryption.md  index.md
docs/security/: CERTIFICATE_PINNING.md  threat-model.md
include/: display_types.h  esp_http_server_compat.h  fan_controller.h  ota_manager.h  sdkconfig.h  sensor_manager.h  thermoflow_config.h  thermoflow_version.h  web_server.h  wifi_manager.h
keys/: README.md  secure_boot_signing_key.pem  secure_boot_signing_key_public.pem
main/: CMakeLists.txt  main.c
scripts/: generate_version.py  sign_firmware.sh
src/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  test_anti_condensation.c  test_fan_controller.c  test_heat_recovery.c  test_https.c  test_main.c  test_secure_boot.c  test_sht4x.c  test_wifi_encryption.c
